# 2d-game-engine

./: .gitignore  CMakeLists.txt  README.md
CMake/: CompilerFlags.cmake  Dependencies.cmake  Executable.cmake
include/: Animation.h  App.h  Area.h  Camera.h  Entity.h  EntityCollision.h  FPS.h  Map.h  Surface.h  Tile.h  constants.h
include/core/: Animation.h  App.h  Area.h  Camera.h  Engine2D.h  EventManager.h  FPS.h  FPSManager.h  GameEntity.h  GameManager.h  InputManager.h  Map.h  RenderEngine.h  RenderSystemSDL.h  RenderWindowSDL.h  SceneManager.h  Sprite.h  SpriteManager.h  Texture.h  TextureManager.h  Tile.h  TimeManager.h
include/gamemap/: GameMap.h  GameMapArea.h  GameMapTile.h  MapArea.h  Tile.h  TileType.h
include/gameplay/: Entity.h  Player.h
include/grid/: GameMap.h  GridManager.h  MapArea.h  Point2D.h  Tile.h  TileMap.h
include/helper/: Logger.h  Platform.h  PlatformLinux.h  PlatformWindows.h  Singleton.h  (+1 more)
includes/: Animation.h  App.h  Area.h  Camera.h  Entity.h  EntityCollision.h  EventManager.h  FPS.h  Map.h  Player.h  Surface.h  Tile.h  main.h
sdltutorials/: Animation.cpp  Animation.h  App.cpp  App.h  Area.cpp  Area.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityCollision.cpp  EntityCollision.h  EventManager.cpp  EventManager.h  FPS.cpp  FPS.h  Map.cpp  Map.h  Player.cpp  Player.h  Surface.cpp  Surface.h  Tile.cpp  Tile.h  constants.h  main.cpp  main.h
src/: Animation.cpp  App.cpp  Area.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  EntityCollision.cpp  EventManager.cpp  FPS.cpp  Map.cpp  Player.cpp  Surface.cpp  Tile.cpp  main.cpp
(+60 files in other folders)
